force-app/main/default/objects/Activity/fields/CRDR__c.field-meta.xml
<CustomField>
    <fullName>CRDR__c</fullName>
    <label>CRDR</label>
    <length>255</length>
    <referenceTo>Forrester_SHIR_CRDR_VIEW__x</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>ExternalLookup</type>
</CustomField>