force-app/main/default/objects/Activity/fields/Related_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Type__c</fullName>
    <label>Related Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>